@@ -44,7 +44,7 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
-                <version>1.16.3</version>
+                <version>1.21.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -180,6 +180,7 @@
                             <include>**/*Property.java</include>
                             <include>**/*Test.java</include>
                         </includes>
+                        <argLine>--enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -191,6 +192,7 @@
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
+                        <argLine>--enable-preview</argLine>
                     </configuration>
                     <executions>
                         <execution>
@@ -206,8 +208,11 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.10.1</version>
                     <configuration>
-                        <source>21</source>
-                        <target>21</target>
+                        <source>25</source>
+                        <target>25</target>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
